--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="cancel">取消</string>
     <string name="confirm">确定</string>
     <string name="notice">提示</string>
+    <string name="search">搜索</string>
 </resources>
